Fixed css issue with search bar not aligning with content below. Catch failure to register user.

--- a/SB004_Web/Content/css/style.css
+++ b/SB004_Web/Content/css/style.css
@@ -630,3 +630,6 @@ height:325px;*/
 	font-weight: bold;
     color: cadetblue !important;
 }
+#searchContainer{
+	padding-left: 10px;
+}
